Added page structure to index

--- a/Index.html
+++ b/Index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Welcome World</title>
-    </head>
-    <body>
-        <header>
-            <nav> Nav Bar </nav>
-        </header>
-        <main>
-            <article>
-                My Article
-            </article>
-            <section>
-                Section
-            </section>
-        </main>
-    </body>
+<html lang="en">
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <title>HTML Resources</title>
+   </head>
+   <body>
+      <!-- Start the body with a header -->
+     <header>
+        <!-- Build Nav Bar here -->
+        <nav>
+           <img src="your/logo/may/go/here.png" alt="Your logo in your navbar!"/>
+        </nav>
+     </header>
+     <!-- The start of the main page -->
+     <main>
+        <!-- Articles can denote blog posts, news articles, etc. that tell search engines that this should be an article. -->
+        <article>
+           <h3>Article heading.</h3>
+           <p>Article text.</p>
+        </article>
+        <section>
+           <!-- div elements are just dividers. They do not have any semantic meaning, but they are commonly used in HTML - often as wrappers to contain other elements or sections in your code. -->
+           <div class="container"></div>
+        </section>
+     </main>
+     <footer>
+        The footer commonly contains sitemaps (links to the main pages of your website), copyright and privacy policy notices, and more. This is information that is useful to access on all of the pages on the website.
+     </footer>
+  </body>
 </html>
