Added Sitemap link to index

--- a/Index.html
+++ b/Index.html
@@ -26,8 +26,9 @@
            <div class="container"></div>
         </section>
      </main>
+     <!-- Footer will contain site map elements, copyright, prvacy, etc -->
      <footer>
-        The footer commonly contains sitemaps (links to the main pages of your website), copyright and privacy policy notices, and more. This is information that is useful to access on all of the pages on the website.
+        <a href="Sitemap"> Sitemap </a>
      </footer>
   </body>
 </html>
