Added form to index

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,8 @@
      <header>
         <!-- Build Nav Bar here -->
         <nav>
-           <img src="your/logo/may/go/here.png" alt="Your logo in your navbar!"/>
+           <img src="#" alt="Your logo in your navbar!"/>
+           <h2>Company Name </h2>
         </nav>
      </header>
      <!-- The start of the main page -->
@@ -19,7 +20,19 @@
         <!-- Articles can denote blog posts, news articles, etc. that tell search engines that this should be an article. -->
         <article>
            <h3>Article heading.</h3>
-           <p>Article text.</p>
+           <p>Place holder text would go <span style="color:red;">here</span></p>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+            </ul>
+            <ol>
+                <li>3</li>
+                <li>4</li>
+            </ol>
+            <!-- Form starts here -->
+            <form action="">
+                <input type="text" placeholder="Emails">
+            </form>
         </article>
         <section>
            <!-- div elements are just dividers. They do not have any semantic meaning, but they are commonly used in HTML - often as wrappers to contain other elements or sections in your code. -->
@@ -28,7 +41,7 @@
      </main>
      <!-- Footer will contain site map elements, copyright, prvacy, etc -->
      <footer>
-        <a href="Sitemap"> Sitemap </a>
+        <a target="_blank" href="#"> anchor tag </a>
      </footer>
   </body>
 </html>
