Added form elements to index

--- a/Index.html
+++ b/Index.html
@@ -31,8 +31,22 @@
             </ol>
             <!-- Form starts here -->
             <form action="">
-                <input type="text" placeholder="Emails">
+                <input name="email" type="email" placeholder="Emails">
+                <input type="number">
+                <input type="tel">
+                <input type="checkbox" name="chk1"> Option 1
+                <input type="checkbox" name="chk2"> Option 2
+                <input type="radio" name="chk1"> option 3
+                <input type="radio" name="chk1"> option 4
+
+
             </form>
+            <textarea name="message" id="" cols="30" rows="10"></textarea>
+            <button type="submit">This is a button </button>
+            <select name="city" id="">
+                <option value="1">Boise</option>
+                <option value="2">Meridian</option>
+            </select>
         </article>
         <section>
            <!-- div elements are just dividers. They do not have any semantic meaning, but they are commonly used in HTML - often as wrappers to contain other elements or sections in your code. -->
