Added media elements to index

--- a/Index.html
+++ b/Index.html
@@ -52,6 +52,8 @@
            <!-- div elements are just dividers. They do not have any semantic meaning, but they are commonly used in HTML - often as wrappers to contain other elements or sections in your code. -->
            <div class="container"></div>
         </section>
+
+        <video src="https://www.youtube.com/watch?v=YuPzpoC3QNc" height="500px" controls></video>
      </main>
      <!-- Footer will contain site map elements, copyright, prvacy, etc -->
      <footer>
